--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>TESTE</title>
+    <title>UNMED PAY</title>
 </head>
 
 <body bgcolor="#ffffff" style="margin: 0;">
@@ -15,7 +15,7 @@
                     style="max-width: 600px;">
                     <tr>
                         <td>
-                            <img src="images/header.jpg" width="100%" border="0" alt="" style="display:block; padding:0;max-width: 600px;">
+                            <img src="images/header.png" width="100%" border="0" alt="UNMED PAY" style="display:block; padding:0;max-width: 600px;">
                         </td>
                     </tr>
                 </table>
@@ -23,70 +23,67 @@
         </tr>
         <tr>
             <td>
-                <table bgcolor="#ffffff" width="100%" border="0" cellpadding="0" cellspacing="0" align="center" style="max-width: 600px;margin-top: -2px;">
+                <table bgcolor="#ffffff" width="100%" border="0" cellpadding="0" cellspacing="0" align="center" style="max-width: 600px;margin-top: -2px !important;">
                     <tr>
                         <td>
-                            <img src="images/img-1.jpg" width="100%" border="0" alt="" style="display:block; padding:0;max-width: 600px;">
+                            <img src="images/fraudes-no-sistema.png" width="100%" border="0" alt="FRAUDES NO SISTEMA DE SAÚDE. Você sabe quanto as operadoras de saúde perdem, por ano, por conta das fraudes? " style="display:block; padding:0;max-width: 600px;">
                         </td>
                     </tr>
                 </table>
             </td>
         </tr>
+        
         <tr>
             <td>
-                <table bgcolor="#ffffff" width="100%" border="0" cellpadding="0" cellspacing="0" align="center" style="max-width: 600px;">
+                <table bgcolor="#c0d735" width="100%" border="0" cellpadding="0" cellspacing="0" align="center" style="max-width: 600px; ">
                     <tr>
-                        <td>
-                            <img src="images/img-2.jpg" width="100%" border="0" alt="" style="display:block; padding:0;max-width: 600px;">
-                        </td>
-                        <td>
-                            <img src="images/img-3.jpg" width="100%" border="0" alt="" style="display:block; padding:0;max-width: 600px;">
+                        <td style="padding: 18px 0 0!important;" align="center">
+                            <img src="images/responda-pra-gente.png" width="100%" border="0" alt="Responda pra gente:" style="display:block; padding:0;max-width: 253px;">
                         </td>
                     </tr>
-                </table>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <table bgcolor="#ffffff" width="100%" border="0" cellpadding="0" cellspacing="0" align="center" style="max-width: 600px;">
                     <tr>
-                        <td>
-                            <img src="images/img-4.jpg" width="100%" border="0" alt="" style="display:block; padding:0;max-width: 600px;">
-                        </td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <table bgcolor="#ffffff" width="100%" border="0" cellpadding="0" cellspacing="0" align="center" style="max-width: 600px;">
-                    <tr>
-                        <td>
-                            <img src="images/img-5.jpg" width="100%" border="0" alt="" style="display:block; padding:0;max-width: 600px;">
-                        </td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <table bgcolor="#ffffff" width="100%" border="0" cellpadding="0" cellspacing="0" align="center" style="max-width: 600px;">
-                    <tr>
-                        <td>
-                            <a href="https://conteudourbano.outgrow.us/conteudourbano-2" target="_blank">
-                                <img src="images/img-6.jpg" width="100%" border="0" alt="" style="display:block; padding:0;max-width: 600px;">
+                        <td align="center">
+                            <a href="https://conteudourbano.outgrow.us/unimedpay_01" target="_blank">
+                                <img src="images/fraudes-na-saude.png" width="100%" border="0" alt="Fraudes na saúde:*. R$ 50 Milhões | R$ 300 Milhões | R$ 20 bilhões | R$ 50 bilhões" style="display:block; padding:0;max-width: 404px;">
                             </a>
                         </td>
                     </tr>
                 </table>
             </td>
         </tr>
+        
+        <tr>
+            <td>
+                <table bgcolor="#ffffff" width="100%" border="0" cellpadding="0" cellspacing="0" align="center" style="max-width: 600px;margin-top: -2px !important;">
+                    <tr>
+                        <td>
+                            <img src="images/unimed-pay-nas-redes.png" width="100%" border="0" alt="" style="display:block; padding:0;max-width: 600px;">
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
         <tr>
             <td>
                 <table bgcolor="#ffffff" width="100%" border="0" cellpadding="0" cellspacing="0" align="center" style="max-width: 600px;">
                     <tr>
                         <td>
-                            <img src="images/footer.jpg" width="100%" border="0" alt="" style="display:block; padding:0;max-width: 600px;">
+                            <img src="images/footer-1.png" width="100%" border="0" alt="Unimed Pay" style="display:block; padding:0;max-width: 98px;">
+                        </td>
+                        <td>
+                            <a href="#" target="_blank" >
+                                <img src="images/linkedin.png" width="100%" border="0" alt="linkedin" style="display:block; padding:0;max-width: 49px;">
+                            </a>
+                        </td>
+                        <td>
+                            <a href="#" target="_blank" >
+                                <img src="images/youtube.png" width="100%" border="0" alt="youtube" style="display:block; padding:0;max-width: 48px;">
+                            </a>
+                        </td>
+                        <td>
+                            <a href="#" target="_blank" >
+                                <img src="images/acesse.png" width="100%" border="0" alt="Clique aqui para acessar nosso site." style="display:block; padding:0;max-width: 405px;">
+                            </a>
                         </td>
                     </tr>
                 </table>
