Ajuste de layout

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <table bgcolor="#ffffff" width="100%" border="0" cellpadding="0" cellspacing="0" align="center" style="max-width: 600px;margin-top: -2px !important;">
                     <tr>
                         <td>
-                            <img src="images/fraudes-no-sistema.png" width="100%" border="0" alt="FRAUDES NO SISTEMA DE SAÚDE. Você sabe quanto as operadoras de saúde perdem, por ano, por conta das fraudes? " style="display:block; padding:0;max-width: 600px;">
+                            <img src="images/fraudes-no-sistema.jpg" width="100%" border="0" alt="FRAUDES NO SISTEMA DE SAÚDE. Você sabe quanto as operadoras de saúde perdem, por ano, por conta das fraudes? " style="display:block; padding:0;max-width: 600px;">
                         </td>
                     </tr>
                 </table>
@@ -45,6 +45,13 @@
                         <td align="center">
                             <a href="https://conteudourbano.outgrow.us/unimedpay_01" target="_blank">
                                 <img src="images/fraudes-na-saude.png" width="100%" border="0" alt="Fraudes na saúde:*. R$ 50 Milhões | R$ 300 Milhões | R$ 20 bilhões | R$ 50 bilhões" style="display:block; padding:0;max-width: 404px;">
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td align="center">
+                            <a href="https://conteudourbano.outgrow.us/unimedpay_01" target="_blank">
+                                <img src="images/acesse-o-link.png" width="100%" border="0" alt="Acesse esse link e saiba mais sobre a solução que a Unimed Participações está propondo, por meio da Unimed Pay. Fique por dentro das nossas comunicações e saiba mais!" style="display:block; padding:0;max-width: 521px;">
                             </a>
                         </td>
                     </tr>
@@ -71,17 +78,17 @@
                             <img src="images/footer-1.png" width="100%" border="0" alt="Unimed Pay" style="display:block; padding:0;max-width: 98px;">
                         </td>
                         <td>
-                            <a href="#" target="_blank" >
+                            <a href="https://br.linkedin.com/company/unimed-participa%C3%A7es-ltda" target="_blank" >
                                 <img src="images/linkedin.png" width="100%" border="0" alt="linkedin" style="display:block; padding:0;max-width: 49px;">
                             </a>
                         </td>
                         <td>
-                            <a href="#" target="_blank" >
+                            <a href="https://www.youtube.com/channel/UCP_1V_AS4b2euFGLRT5YUeA" target="_blank" >
                                 <img src="images/youtube.png" width="100%" border="0" alt="youtube" style="display:block; padding:0;max-width: 48px;">
                             </a>
                         </td>
                         <td>
-                            <a href="#" target="_blank" >
+                            <a href="https://www.unimed.coop.br/site/web/participacoes" target="_blank" >
                                 <img src="images/acesse.png" width="100%" border="0" alt="Clique aqui para acessar nosso site." style="display:block; padding:0;max-width: 405px;">
                             </a>
                         </td>
